# nn_rust

./: .gitignore  Cargo.toml  README.md
data/: download_mnist.py
examples/: graph.rs  spiral.rs  xor.rs
examples/plotting/: mod.rs
src/: lib.rs  main.rs  math.rs  neural_net.rs  plotting.rs
src/math/: matrix.rs  vector.rs
src/neural_net/: activation.rs  data_point.rs  functions.rs  layer.rs  matrix.rs  network.rs
