[package]
name = "nn_rust"
version = "0.1.2"
edition = "2024"
description = "A small neural network library in Rust"
license = "MIT"
repository = "https://github.com/SpaceByteStudios/nn_rust"
readme = "README.md"

[dependencies]
rand = "0.10.1"

[dev-dependencies]
plotters = "0.3.7"
flate2 = "1.1.9"
